--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -6,6 +6,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="/style.css">
     <title>{{ title }}</title>
+    <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
     {% include 'header.njk' %}
@@ -18,6 +19,19 @@
     {# {{}} = grap information, {%%} = grap a file #}
 
     {% include 'footer.njk' %}
+
+
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
 </body>
 </html>
 <script>
