fix a veeery smaal bug
replace collections.post by collections.all
to show all articles that don't have post tag

--- a/src/blog.njk
+++ b/src/blog.njk
@@ -8,7 +8,7 @@ layout: 'base.njk'
 
   <ul role="list" class="articles__list flow">
 
-    {%- for post in collections.post -%}
+    {%- for post in collections.all -%}
       {% include 'article-snippet.njk' %}
     {%- endfor -%}
 
