--- a/src/blog.njk
+++ b/src/blog.njk
@@ -8,7 +8,7 @@ layout: 'base.njk'
 
   <ul role="list" class="articles__list flow">
 
-    {%- for post in collections.all -%}
+    {%- for post in collections.article -%}
       {% include 'article-snippet.njk' %}
     {%- endfor -%}
 
